--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "utah-trails",
   "version": "0.1.0",
   "private": true,
+  "main": "server/index.js",
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "axios": "^0.17.1",
+    "express": "^4.16.2",
+    "google-maps-react": "^1.1.2",
+    "mapbox-gl": "^0.44.0",
+    "massive": "^4.6.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-promise-middleware": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
