--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "google-maps-react": "^1.1.2",
     "mapbox-gl": "^0.44.0",
