--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "google-maps-react": "^1.1.2",
     "mapbox-gl": "^0.44.0",
     "massive": "^4.6.4",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0"
   },
   "scripts": {
