--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "server/index.js",
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "aframe": "^0.7.1",
+    "aframe-particle-system-component": "^1.0.11",
+    "aframe-react": "^4.4.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
